# inference-deployment

./: .gitignore  README.md  pyproject.toml
.docker/: docker-compose.yml
.eks/: inference-profile.json
.eks/dynamo/: README.md  hf-token-secret.example.yaml  model-cache-pvc.yaml.tpl  service-llm.yaml.tpl
.eks/monitoring/: dcgm-exporter-values.yaml  dynamo-frontend-podmonitor.yaml.tpl  dynamo-llm-servicemonitor.yaml.tpl  dynamo-worker-podmonitor.yaml.tpl  grafana-dashboard-gpu-token-metrics.yaml  grafana-dashboard-inference-overview.yaml  grafana-dashboard-loki-logs.yaml  grafana-dashboard-network-comparison.yaml  kube-prometheus-stack-values.yaml  loki-values.yaml  promtail-values.yaml  ray-metrics-service.yaml  ray-metrics-servicemonitor.yaml  ray-worker-servicemonitor.yaml  vllm-head-service.yaml  vllm-head-servicemonitor.yaml
.eks/ray/: ray-vllm-service.yaml  ray-vllm-service.yaml.tpl
.eks/templates/: benchmark-runner-pod.yaml.tpl  nvidia-smi-all-gpus-pod.yaml.tpl
.kube/: ENGINE_SWITCHING.md  INGRESS_SETUP.md
.kube/base/: .gitkeep  cache.yaml  config.yaml  ingress.yaml  kustomization.yaml  model-download.yaml  pvc.yaml  secrets.example.yaml
.kube/dynamo-operator/: dynamo-debian-values.yaml
.kube/llamacpp/: deployment.yaml  (+1 more)
.kube/llamacpp-single/: deployment.yaml
ansible/: README.md  dynamo-platform-install.yml
app/: Dockerfile  README.md  app.py
docs/: eks_experiment_matrix.md  eks_inference_cluster.md  eks_terraform_quick_review.md
notebooks/: test_server.ipynb
scripts/: download_qwen.py  dynamo-down.sh  dynamo-up.sh  rotate_gateway_keys.sh
(+110 files in other folders)
